--- a/catalog/view/theme/default/hairclub.html
+++ b/catalog/view/theme/default/hairclub.html
@@ -175,7 +175,7 @@
 					
 					<ul>
 						<li class="clearfix">
-							<a href="javascript:0;">All Hair Collections <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">All Hair Collections </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">Double Drawn Funmi Hair </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Virgin Brazilian Hair </a></li>
@@ -184,7 +184,7 @@
 							</ol>
 						</li>
 						<li class="clearfix">
-							<a href="javascript:0;">Closure & Frontal & Wig <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">Closure & Frontal & Wig </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">360 Frontal </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Customized Bundles Wig</a></li>
@@ -218,91 +218,109 @@
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
-						</div>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How Tx! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
-						</div>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 					<li>
 						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
-						<div class="bg_div">
-							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						<div class="text_vd clearfix">
+							<div class="bg_div">
+								<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+							</div>
 						</div>
 					</li>
 				</ul>
@@ -516,27 +534,5 @@
 			
 			$(this).css("display","none");
 		})
-		
-		
-//		$(".video_li").each(function(){
-//			this.addEventListener('play',function(){ 
-//				var this_index = $(this).parents("li").index()
-//				console.log(this_index)
-//				$(".video_li").each(function(){
-//					this.pause();
-//				})
-//				document.getElementsByClassName("video_li")[this_index].play()
-//			});
-//		})
-//		for(var i=0; i<$(".video_ul li").length;i++){
-//			document.getElementsByClassName("video_li")[i].addEventListener('play',function(){  
-//				$(".video_li").each(function(){
-//					this.pause();
-//				})
-//					document.getElementsByClassName("video_li")[i].play();
-//			});  
-//		}
-		
-		
 	})
 </script>
