--- a/catalog/view/theme/default/hairknow1.html
+++ b/catalog/view/theme/default/hairknow1.html
@@ -175,7 +175,7 @@
 					
 					<ul>
 						<li class="clearfix">
-							<a href="javascript:0;">All Hair Collections <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">All Hair Collections </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">Double Drawn Funmi Hair </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Virgin Brazilian Hair </a></li>
@@ -184,7 +184,7 @@
 							</ol>
 						</li>
 						<li class="clearfix">
-							<a href="javascript:0;">Closure & Frontal & Wig <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">Closure & Frontal & Wig </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">360 Frontal </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Customized Bundles Wig</a></li>
@@ -213,7 +213,12 @@
 		<div class="haircare">
 			<div class="content in_content clearfix">
 				<div class="hair_text clearfix">
-					<img class="changeimage bnr_img" data-image='img/jpg/hairknow1.jpg' data-mimage='img/jpg/yd_hairknow1.jpg'  />
+					<div class="bnr_div">
+						<img class="changeimage bnr_img" data-image='img/jpg/harb4.jpg' data-mimage='img/jpg/yd_harb4.jpg'  />
+						<div class="hui">
+							<p>Something You Should Know Before Buying Human Hair Extensions.</p>
+						</div>
+					</div>
 					<div class="text2 clearfix">
 						<div class="left fl clearfix">
 							<p>Author : <span>rebecca</span> / 2018-06-28</p>
