--- a/catalog/view/theme/default/my_order_null.html
+++ b/catalog/view/theme/default/my_order_null.html
@@ -13,7 +13,7 @@
 	<body>
 		<!--头部-->
 		<div class="big_nav">
-			<div class="nav content clearfix">
+			<div class="nav content yd_hide clearfix">
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -175,7 +175,7 @@
 					
 					<ul>
 						<li class="clearfix">
-							<a href="javascript:0;">All Hair Collections <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">All Hair Collections </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">Double Drawn Funmi Hair </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Virgin Brazilian Hair </a></li>
@@ -184,7 +184,7 @@
 							</ol>
 						</li>
 						<li class="clearfix">
-							<a href="javascript:0;">Closure & Frontal & Wig <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">Closure & Frontal & Wig </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">360 Frontal </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Customized Bundles Wig</a></li>
@@ -206,10 +206,14 @@
 				</div>
 				
 			</div>
-		
+			
+			<div class="new_nav pc_hide clearfix">
+				<a class="fh" href="###"></a>
+				<p>MY ORDERS</p>
+			</div>
 		</div>
 		<!--内容-->
-		<div class=" in_content peo_center">
+		<div class=" in_content peo_center new_in_content clearfix">
 			<div class="content clearfix">
 				
 				<div class="left clearfix">
@@ -227,10 +231,10 @@
 					</ol>
 				</div>
 				
-				<div class="right m_account clearfix">
+				<div class="right  or_null clearfix">
 					
-					<img src="img/png/order.png"/>
-					<p> You have placed no orders</p>
+					<img src="img/png/new_5_.png"/>
+					<p> You haven't placed order yet, start now~</p>
 					<a class="a_btn" href="###">GO SHOPPING &nbsp;&nbsp;&nbsp;></a>
 					
 				</div>
@@ -303,7 +307,7 @@
 		</div>
 		
 		<!--yd底部-->
-		<div class="yd_footer clearfix">
+		<div class="yd_footer hide clearfix">
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
@@ -373,7 +377,7 @@
 			</div>
 			<p class="clearfix">Copyright Notice &copy; 2016-2018 www.hotbeautyhairmall.com All rights reserved</p>
 		</div>
-		<div class="yd_footer2">
+		<div class="yd_footer2 hide">
 			<ol class="ol_ydfot clearfix">
 				<li class="active">
 					<a href="###">
