--- a/catalog/view/theme/default/search.html
+++ b/catalog/view/theme/default/search.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>SHOPCART</title>
+		<title>SEARCH</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -175,7 +175,7 @@
 					
 					<ul>
 						<li class="clearfix">
-							<a href="javascript:0;">All Hair Collections <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">All Hair Collections </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">Double Drawn Funmi Hair </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Virgin Brazilian Hair </a></li>
@@ -184,7 +184,7 @@
 							</ol>
 						</li>
 						<li class="clearfix">
-							<a href="javascript:0;">Closure & Frontal & Wig <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">Closure & Frontal & Wig </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">360 Frontal </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Customized Bundles Wig</a></li>
@@ -211,45 +211,15 @@
 		<!--内容-->
 		<div class="content in_content pro_content  search_div">
 			
-			<h1>Search-double</h1>
+			<!--<h1>Search-double</h1>-->
 			<form>
 				<div class="form_sr clearfix">
-					<p class="p_sr">Search Criteria</p>
-					<input class="input_sr" type="text"  />
-					<select name="">
-						<option value="">All Categories</option>
-						<option value="">All Categories2</option>
-						<option value="">All Categories3</option>
-						<option value="">All Categories4</option>
-					</select>
-					<div class="sr_div">
-						<input type="checkbox"/>
-						<span class="span1"></span>
-						<span class="span2"></span>
-						<p>Search in subcategories</p>
-					</div>
-					<div class="sr_div">
-						<input type="checkbox"/>
-						<span class="span1"></span>
-						<span class="span2"></span>
-						<p>Search in product descriptions</p>
-					</div>
-					<button class="clearfix">Search</button>
+					<input class="input_sr" type="text" value="search" disabled="disabled"  />
+					<p class="search_items">113 items</p>
 				</div>
 			</form>
 			
 			<div class="ser_bot clearfix">
-				<h1>Products meeting the search criteria</h1>
-				<label for="">
-					<span>Sort By:</span>
-					<select name="">
-						<option value="">Default</option>
-						<option value="">Default1</option>
-						<option value="">Default2</option>
-						<option value="">Default3</option>
-					</select>
-				</label>
-				
 				<ul class="pro_ul clearfix">
 						<li>
 							<a href="###">
@@ -257,9 +227,8 @@
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
-									<span>$35.30</span>
-									<p class="p1">Silky Straight</p>
 									<p>Fuller Peruvian Virgin Hair Body Wavy 10inch to 30inch</p>
+									<span>$35.30 <span class="new">NEW</span></span>
 								</div>
 							</a>
 							<div class="sc_div"></div>
@@ -270,9 +239,8 @@
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
-									<span>$35.30</span>
-									<p class="p1">Silky Straight</p>
 									<p>Fuller Peruvian Virgin Hair Body Wavy 10inch to 30inch</p>
+									<span>$35.30 <span class="sale">SALE</span></span>
 								</div>
 							</a>
 							<div class="sc_div"></div>
@@ -283,9 +251,8 @@
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
-									<span>$35.30</span>
-									<p class="p1">Silky Straight</p>
 									<p>Fuller Peruvian Virgin Hair Body Wavy 10inch to 30inch</p>
+									<span>$35.30</span>
 								</div>
 							</a>
 							<div class="sc_div"></div>
@@ -296,14 +263,52 @@
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
-									<span>$35.30</span>
-									<p class="p1">Silky Straight</p>
 									<p>Fuller Peruvian Virgin Hair Body Wavy 10inch to 30inch</p>
+									<span>$35.30</span>
+								</div>
+							</a>
+							<div class="sc_div"></div>
+						</li>
+						
+						<li>
+							<a href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<p>Fuller Peruvian Virgin Hair Body Wavy 10inch to 30inch</p>
+									<span>$35.30</span>
+								</div>
+							</a>
+							<div class="sc_div"></div>
+						</li>
+						<li>
+							<a href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<p>Fuller Peruvian Virgin Hair Body Wavy 10inch to 30inch</p>
+									<span>$35.30</span>
 								</div>
 							</a>
 							<div class="sc_div"></div>
 						</li>
 					</ul>
+				
+				<div class="fy_div clearfix">
+					<ul>
+						<li class="li_jt active"><a href="###"> < </a></li>
+						<li class="li_fy active"><a href="###">1</a></li>
+						<li class="li_fy"><a href="###">2</a></li>
+						<li class="li_fy"><a href="###">3</a></li>
+						<li class="li_fy"><a href="###">4</a></li>
+						<li class="li_fy"><a href="###">5</a></li>
+						<li class="li_fy"><a href="###">6</a></li>
+						<li class="li_fy"><a href="###">7</a></li>
+						<li class="li_jt"><a href="###"> > </a></li>
+					</ul>
+				</div>
 			</div>
 			
 		</div>
@@ -499,6 +504,29 @@
 				$(this).addClass("off");
 				$(this).siblings(".span1").css("display","none");
 				$(this).siblings(".span2").css("display","block");
+			}
+		})
+		
+		//收藏
+		$(".pro_content .pro_ul .sc_div").click(function(){
+			var win = $(window).width()
+			
+			if(win>992){
+				if($(this).hasClass("off")){
+					$(this).removeClass("off");
+					$(this).css("background","url(img/png/pro_star.png) no-repeat").css("background-size","1.87vw 1.87vw");
+				}else{
+					$(this).addClass("off");
+					$(this).css("background","url(img/png/pro_star_.png) no-repeat").css("background-size","1.87vw 1.87vw");
+				}
+			}else{
+				if($(this).hasClass("off")){
+					$(this).removeClass("off");
+					$(this).css("background","url(img/png/pro_star.png) no-repeat").css("background-size","0.5rem 0.5rem");
+				}else{
+					$(this).addClass("off");
+					$(this).css("background","url(img/png/pro_star_.png) no-repeat").css("background-size","0.5rem 0.5rem");
+				}
 			}
 		})
 	})
