--- a/catalog/view/theme/default/shopcart2.html
+++ b/catalog/view/theme/default/shopcart2.html
@@ -13,7 +13,7 @@
 	<body>
 		<!--头部-->
 		<div class="big_nav">
-			<div class="nav content clearfix">
+			<div class="nav yd_hide content clearfix">
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -175,7 +175,7 @@
 					
 					<ul>
 						<li class="clearfix">
-							<a href="javascript:0;">All Hair Collections <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">All Hair Collections </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">Double Drawn Funmi Hair </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Virgin Brazilian Hair </a></li>
@@ -184,7 +184,7 @@
 							</ol>
 						</li>
 						<li class="clearfix">
-							<a href="javascript:0;">Closure & Frontal & Wig <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">Closure & Frontal & Wig </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">360 Frontal </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Customized Bundles Wig</a></li>
@@ -206,23 +206,35 @@
 				</div>
 				
 			</div>
-		
+			
+			<div class="new_nav pc_hide clearfix">
+				<a class="fh" href="###"></a>
+				<p>SHOPPING CART</p>
+			</div>
+			
 		</div>
 		<!--内容-->
 		<div class="shopcart2 clearfix">
-			<div class="content in_content shop2_content clearfix">
-				<div class="top clearfix">
+			<div class="content in_content shop2_content clearfix new_in_content">
+				<!--<div class="top clearfix">
 					<h1>SHOPPING CART</h1>
 					<a href="###">Continue Shopping</a>
-				</div>
+				</div>-->
 				
 				<div class="shop2_text clearfix">
 					<div class="left">
-						<label for="" class="qx_label">
+						<!--<label for="" class="qx_label">
 							<span>ALL</span>
 							<input class="check_input" type="checkbox" />
 							<i class="check_i"></i>
-						</label>
+						</label>-->
+						<div class="del clearfix">
+							<svg t="1539766974948" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5269" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32">
+								<path d="M793.6 998.4H220.16c-51.2 0-97.28-40.96-97.28-97.28V261.12c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v645.12c0 25.6 20.48 46.08 46.08 46.08h573.44c25.6 0 46.08-20.48 46.08-46.08v-563.2c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v563.2c0 46.08-46.08 92.16-97.28 92.16z" p-id="5270" fill="#333"></path>
+								<path d="M51.2 266.24c-10.24 0-20.48-10.24-25.6-25.6 0-15.36 10.24-25.6 25.6-25.6l916.48-81.92c15.36 0 25.6 10.24 25.6 25.6s-10.24 25.6-25.6 25.6L51.2 266.24c5.12 0 0 0 0 0z" p-id="5271" fill="#333"></path>
+								<path d="M343.04 230.4c-10.24 0-20.48-10.24-25.6-25.6l-5.12-76.8C307.2 87.04 337.92 51.2 378.88 46.08l225.28-20.48c20.48 0 40.96 5.12 56.32 15.36 15.36 10.24 25.6 30.72 25.6 51.2l5.12 81.92c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6l-5.12-81.92c0-10.24-10.24-20.48-25.6-20.48l-225.28 25.6c-5.12 0-10.24 5.12-15.36 10.24-5.12 0-5.12 10.24-5.12 15.36L368.64 204.8c0 10.24-10.24 25.6-25.6 25.6 5.12 0 0 0 0 0zM435.2 768c-15.36 0-25.6-15.36-25.6-30.72V399.36c0-15.36 10.24-40.96 25.6-40.96s25.6 25.6 25.6 35.84v337.92c0 15.36-10.24 35.84-25.6 35.84zM588.8 768c-15.36 0-25.6-15.36-25.6-30.72V465.92c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v271.36c0 15.36-10.24 30.72-25.6 30.72z" p-id="5272" fill="#333"></path>
+							</svg>	
+						</div>
 						<ul class="shop2_ul">
 							<li class="clearfix">
 								<label for="" class="dx_label">
@@ -233,10 +245,10 @@
 									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
 								</div>
 								<div class="text">
-									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
+									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy Virgin Hair  Body Wavy  </a>
+									<p>#1B Natural Black</p>
+									<p>10inch 100g</p>
+									<p>straight</p>
 								</div>
 								<div class="price clearfix">
 									<p>$35.65<span>$35.65</span></p>
@@ -248,8 +260,8 @@
 										<span class="add"></span>
 									</div>
 								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
+								<!--<div class="close"></div>-->
+								<!--<span class="wishlist">Move to Wishlist</span>-->
 							</li>
 							<li class="clearfix">
 								<label for="" class="dx_label">
@@ -261,12 +273,12 @@
 								</div>
 								<div class="text">
 									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
+									<p>#1B Natural Black</p>
+									<p>10inch 100g</p>
+									<p>straight</p>
 								</div>
 								<div class="price clearfix">
-									<p>$35.65<span>$35.65</span></p>
+									<p>$35.65</p>
 								</div>
 								<div class="pre_div">
 									<div class="num_div">
@@ -275,13 +287,13 @@
 										<span class="add"></span>
 									</div>
 								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
+								<!--<div class="close"></div>-->
+								<!--<span class="wishlist">Move to Wishlist</span>-->
 							</li>
 						</ul>
 					</div>
 				
-					<div class="right">
+					<!--<div class="right">
 						<div class="bg_fff">
 							<h2>SUMMARY</h2>
 							<p class="p1">Subtotal <span class="fr">$70.00</span></p>
@@ -300,7 +312,7 @@
 								<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
 							</div>
 						</div>
-					</div>
+					</div>-->
 				</div>
 				
 				<div class="bot clearfix">
@@ -339,6 +351,16 @@
 							information you may provide.
 						</dd>
 					</dl>
+				</div>
+				
+				<div class="total clearfix">
+					<label for="" class="qx_label">
+						<span>All</span>
+						<input class="check_input" type="checkbox" />
+						<i class="check_i"></i>
+					</label>
+					<p>Total: <span>$119.59</span></p>
+					<a class="tj_btn" href="###"> CHECK OUT</a>
 				</div>
 				
 			</div>
@@ -406,7 +428,7 @@
 		</div>
 		
 		<!--yd底部-->
-		<div class="yd_footer clearfix">
+		<div class="yd_footer hide clearfix">
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
@@ -476,7 +498,7 @@
 			</div>
 			<p class="clearfix">Copyright Notice &copy; 2016-2018 www.hotbeautyhairmall.com All rights reserved</p>
 		</div>
-		<div class="yd_footer2">
+		<div class="yd_footer2 hide">
 			<ol class="ol_ydfot clearfix">
 				<li class="active">
 					<a href="###">
@@ -581,31 +603,44 @@
 		})
 		
 		//收藏
-		$(".wishlist").click(function(){
-			var win = $(window).width();
-			if(win>992){
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#d5af74");
-				}
-			}else{
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#d5af74");
-				}
-			}
-			
-		})
+//		$(".wishlist").click(function(){
+//			var win = $(window).width();
+//			if(win>992){
+//				if($(this).hasClass("off")){
+//					$(this).removeClass("off");
+//					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#666");
+//				}else{
+//					$(this).addClass("off");
+//					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#d5af74");
+//				}
+//			}else{
+//				if($(this).hasClass("off")){
+//					$(this).removeClass("off");
+//					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#666");
+//				}else{
+//					$(this).addClass("off");
+//					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#d5af74");
+//				}
+//			}
+//			
+//		})
 		
 		//删除
-		$(".shopcart2 .close").click(function(){
-			$(this).parents("li").remove();
+		$(".shopcart2 .del").click(function(){
+			var i =0;
+			var len = $(".dx_label .check_i").length;
+			$(".dx_label .check_i").each(function(){
+				if($(this).hasClass("active")){
+					$(this).parents("li").remove();
+				}else{
+					i++;
+					if(i==len){
+						tips('You haven`t select any item','gantan');
+					}
+				}
+			})
+			
+			
 		})
 		
 		//搜索
