--- a/catalog/view/theme/default/view_order1.html
+++ b/catalog/view/theme/default/view_order1.html
@@ -175,7 +175,7 @@
 					
 					<ul>
 						<li class="clearfix">
-							<a href="javascript:0;">All Hair Collections <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">All Hair Collections </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">Double Drawn Funmi Hair </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Virgin Brazilian Hair </a></li>
@@ -184,7 +184,7 @@
 							</ol>
 						</li>
 						<li class="clearfix">
-							<a href="javascript:0;">Closure & Frontal & Wig <img class="slide_img" src="img/png/jiahao.png"/></a>
+							<a href="###">Closure & Frontal & Wig </a><img class="slide_img" src="img/png/jiahao.png" data-img="img/png/jiahao.png" data-imgs="img/png/jianhao.png"/>
 							<ol class="yd_nav_ol clearfix">
 								<li class="clearfix"><a class="right_img" href="###">360 Frontal </a></li>
 								<li class="clearfix"><a class="right_img" href="###">Customized Bundles Wig</a></li>
@@ -251,8 +251,8 @@
 						<div class="text clearfix">
 							<div class="span_div clearfix">
 								<span>Subtotal</span>
-								<span>Length</span>
 								<span>Quantity</span>
+								<span class="cl_len">Lace Closure Color Length</span>
 								<span>Unit  Price</span>
 							</div>							
 							
@@ -263,8 +263,8 @@
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
 									<span class="d_price">$35.05</span>
-									<span class="num"><i class="yd_i">X</i>1</span>
-									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="num"><i class="yd_i">X</i> 1 </span>
+									<span class="length">Middle Parting #1 Jet Black 10 Inch 100g</span>
 									<span class="z_price">$35.05</span>
 								</li>
 								<li class="clearfix">
